WebGPUGen/WebGPUGen/Headers/webgpu.h

typedef uint32_t WGPUFlags;
typedef struct WGPUPipelineLayoutImpl* WGPUPipelineLayout;
typedef struct WGPUQuerySetImpl* WGPUQuerySet;
typedef struct WGPUShaderModuleImpl* WGPUShaderModule;
typedef struct WGPUTextureImpl* WGPUTexture;
typedef struct WGPUTextureViewImpl* WGPUTextureView;
typedef enum WGPUCompareFunction {
    WGPUCompareFunction_Undefined = 0x00000000,
    WGPUCompareFunction_Never = 0x00000001,
    WGPUCompareFunction_Less = 0x00000002,
    WGPUCompareFunction_LessEqual = 0x00000003,
    WGPUCompareFunction_Greater = 0x00000004,
    WGPUCompareFunction_GreaterEqual = 0x00000005,
    WGPUCompareFunction_Equal = 0x00000006,
    WGPUCompareFunction_NotEqual = 0x00000007,
    WGPUCompareFunction_Always = 0x00000008,
    WGPUCompareFunction_Force32 = 0x7FFFFFFF
} WGPUCompareFunction;
typedef enum WGPUCullMode {
    WGPUCullMode_None = 0x00000000,
    WGPUCullMode_Front = 0x00000001,
    WGPUCullMode_Back = 0x00000002,
    WGPUCullMode_Force32 = 0x7FFFFFFF
} WGPUCullMode;
typedef enum WGPUFrontFace {
    WGPUFrontFace_CCW = 0x00000000,
    WGPUFrontFace_CW = 0x00000001,
    WGPUFrontFace_Force32 = 0x7FFFFFFF
} WGPUFrontFace;
typedef enum WGPUIndexFormat {
    WGPUIndexFormat_Uint16 = 0x00000000,
    WGPUIndexFormat_Uint32 = 0x00000001,
    WGPUIndexFormat_Force32 = 0x7FFFFFFF
} WGPUIndexFormat;
typedef enum WGPUInputStepMode {
    WGPUInputStepMode_Vertex = 0x00000000,
    WGPUInputStepMode_Instance = 0x00000001,
    WGPUInputStepMode_Force32 = 0x7FFFFFFF
} WGPUInputStepMode;
typedef enum WGPULoadOp {
    WGPULoadOp_Clear = 0x00000000,
    WGPULoadOp_Load = 0x00000001,
    WGPULoadOp_Force32 = 0x7FFFFFFF
} WGPULoadOp;
typedef enum WGPUPrimitiveTopology {
    WGPUPrimitiveTopology_PointList = 0x00000000,
    WGPUPrimitiveTopology_LineList = 0x00000001,
    WGPUPrimitiveTopology_LineStrip = 0x00000002,
    WGPUPrimitiveTopology_TriangleList = 0x00000003,
    WGPUPrimitiveTopology_TriangleStrip = 0x00000004,
    WGPUPrimitiveTopology_Force32 = 0x7FFFFFFF
} WGPUPrimitiveTopology;
typedef enum WGPUSType {
    WGPUSType_Invalid = 0x00000000,
    WGPUSType_SurfaceDescriptorFromMetalLayer = 0x00000001,
    WGPUSType_SurfaceDescriptorFromWindowsHWND = 0x00000002,
    WGPUSType_SurfaceDescriptorFromXlib = 0x00000003,
    WGPUSType_SurfaceDescriptorFromHTMLCanvasId = 0x00000004,
    WGPUSType_ShaderModuleSPIRVDescriptor = 0x00000005,
    WGPUSType_ShaderModuleWGSLDescriptor = 0x00000006,
    WGPUSType_SamplerDescriptorDummyAnisotropicFiltering = 0x00000007,
    WGPUSType_RenderPipelineDescriptorDummyExtension = 0x00000008,
    WGPUSType_Force32 = 0x7FFFFFFF
} WGPUSType;
typedef enum WGPUStoreOp {
    WGPUStoreOp_Store = 0x00000000,
    WGPUStoreOp_Clear = 0x00000001,
    WGPUStoreOp_Force32 = 0x7FFFFFFF
} WGPUStoreOp;
typedef enum WGPUTextureDimension {
    WGPUTextureDimension_1D = 0x00000000,
    WGPUTextureDimension_2D = 0x00000001,
    WGPUTextureDimension_3D = 0x00000002,
    WGPUTextureDimension_Force32 = 0x7FFFFFFF
} WGPUTextureDimension;
typedef enum WGPUTextureFormat {
    WGPUTextureFormat_Undefined = 0x00000000,
    WGPUTextureFormat_R8Unorm = 0x00000001,
    WGPUTextureFormat_R8Snorm = 0x00000002,
    WGPUTextureFormat_R8Uint = 0x00000003,
    WGPUTextureFormat_R8Sint = 0x00000004,
    WGPUTextureFormat_R16Uint = 0x00000005,
    WGPUTextureFormat_R16Sint = 0x00000006,
    WGPUTextureFormat_R16Float = 0x00000007,
    WGPUTextureFormat_RG8Unorm = 0x00000008,
    WGPUTextureFormat_RG8Snorm = 0x00000009,
    WGPUTextureFormat_RG8Uint = 0x0000000A,
    WGPUTextureFormat_RG8Sint = 0x0000000B,
    WGPUTextureFormat_R32Float = 0x0000000C,
    WGPUTextureFormat_R32Uint = 0x0000000D,
    WGPUTextureFormat_R32Sint = 0x0000000E,
    WGPUTextureFormat_RG16Uint = 0x0000000F,
    WGPUTextureFormat_RG16Sint = 0x00000010,
    WGPUTextureFormat_RG16Float = 0x00000011,
    WGPUTextureFormat_RGBA8Unorm = 0x00000012,
    WGPUTextureFormat_RGBA8UnormSrgb = 0x00000013,
    WGPUTextureFormat_RGBA8Snorm = 0x00000014,
    WGPUTextureFormat_RGBA8Uint = 0x00000015,
    WGPUTextureFormat_RGBA8Sint = 0x00000016,
    WGPUTextureFormat_BGRA8Unorm = 0x00000017,
    WGPUTextureFormat_BGRA8UnormSrgb = 0x00000018,
    WGPUTextureFormat_RGB10A2Unorm = 0x00000019,
    WGPUTextureFormat_RG11B10Float = 0x0000001A,
    WGPUTextureFormat_RG32Float = 0x0000001B,
    WGPUTextureFormat_RG32Uint = 0x0000001C,
    WGPUTextureFormat_RG32Sint = 0x0000001D,
    WGPUTextureFormat_RGBA16Uint = 0x0000001E,
    WGPUTextureFormat_RGBA16Sint = 0x0000001F,
    WGPUTextureFormat_RGBA16Float = 0x00000020,
    WGPUTextureFormat_RGBA32Float = 0x00000021,
    WGPUTextureFormat_RGBA32Uint = 0x00000022,
    WGPUTextureFormat_RGBA32Sint = 0x00000023,
    WGPUTextureFormat_Depth32Float = 0x00000024,
    WGPUTextureFormat_Depth24Plus = 0x00000025,
    WGPUTextureFormat_Depth24PlusStencil8 = 0x00000026,
    WGPUTextureFormat_BC1RGBAUnorm = 0x00000027,
    WGPUTextureFormat_BC1RGBAUnormSrgb = 0x00000028,
    WGPUTextureFormat_BC2RGBAUnorm = 0x00000029,
    WGPUTextureFormat_BC2RGBAUnormSrgb = 0x0000002A,
    WGPUTextureFormat_BC3RGBAUnorm = 0x0000002B,
    WGPUTextureFormat_BC3RGBAUnormSrgb = 0x0000002C,
    WGPUTextureFormat_BC4RUnorm = 0x0000002D,
    WGPUTextureFormat_BC4RSnorm = 0x0000002E,
    WGPUTextureFormat_BC5RGUnorm = 0x0000002F,
    WGPUTextureFormat_BC5RGSnorm = 0x00000030,
    WGPUTextureFormat_BC6HRGBUfloat = 0x00000031,
    WGPUTextureFormat_BC6HRGBSfloat = 0x00000032,
    WGPUTextureFormat_BC7RGBAUnorm = 0x00000033,
    WGPUTextureFormat_BC7RGBAUnormSrgb = 0x00000034,
    WGPUTextureFormat_Force32 = 0x7FFFFFFF
} WGPUTextureFormat;
typedef enum WGPUVertexFormat {
    WGPUVertexFormat_UChar2 = 0x00000000,
    WGPUVertexFormat_UChar4 = 0x00000001,
    WGPUVertexFormat_Char2 = 0x00000002,
    WGPUVertexFormat_Char4 = 0x00000003,
    WGPUVertexFormat_UChar2Norm = 0x00000004,
    WGPUVertexFormat_UChar4Norm = 0x00000005,
    WGPUVertexFormat_Char2Norm = 0x00000006,
    WGPUVertexFormat_Char4Norm = 0x00000007,
    WGPUVertexFormat_UShort2 = 0x00000008,
    WGPUVertexFormat_UShort4 = 0x00000009,
    WGPUVertexFormat_Short2 = 0x0000000A,
    WGPUVertexFormat_Short4 = 0x0000000B,
    WGPUVertexFormat_UShort2Norm = 0x0000000C,
    WGPUVertexFormat_UShort4Norm = 0x0000000D,
    WGPUVertexFormat_Short2Norm = 0x0000000E,
    WGPUVertexFormat_Short4Norm = 0x0000000F,
    WGPUVertexFormat_Half2 = 0x00000010,
    WGPUVertexFormat_Half4 = 0x00000011,
    WGPUVertexFormat_Float = 0x00000012,
    WGPUVertexFormat_Float2 = 0x00000013,
    WGPUVertexFormat_Float3 = 0x00000014,
    WGPUVertexFormat_Float4 = 0x00000015,
    WGPUVertexFormat_UInt = 0x00000016,
    WGPUVertexFormat_UInt2 = 0x00000017,
    WGPUVertexFormat_UInt3 = 0x00000018,
    WGPUVertexFormat_UInt4 = 0x00000019,
    WGPUVertexFormat_Int = 0x0000001A,
    WGPUVertexFormat_Int2 = 0x0000001B,
    WGPUVertexFormat_Int3 = 0x0000001C,
    WGPUVertexFormat_Int4 = 0x0000001D,
    WGPUVertexFormat_Force32 = 0x7FFFFFFF
} WGPUVertexFormat;
typedef WGPUFlags WGPUColorWriteMaskFlags;
typedef WGPUFlags WGPUTextureUsageFlags;
typedef struct WGPUChainedStruct {
    struct WGPUChainedStruct const* next;
    WGPUSType sType;
} WGPUChainedStruct;
typedef struct WGPUBlendDescriptor {
    WGPUBlendOperation operation;
    WGPUBlendFactor srcFactor;
    WGPUBlendFactor dstFactor;
} WGPUBlendDescriptor;
typedef struct WGPUColor {
    float r;
    float g;
    float b;
    float a;
} WGPUColor;
typedef struct WGPUExtent3D {
    uint32_t width;
    uint32_t height;
    uint32_t depth;
} WGPUExtent3D;
typedef struct WGPUOrigin3D {
    uint32_t x;
    uint32_t y;
    uint32_t z;
} WGPUOrigin3D;
typedef struct WGPUProgrammableStageDescriptor {
    WGPUChainedStruct const* nextInChain;
    WGPUShaderModule module;
    char const* entryPoint;
} WGPUProgrammableStageDescriptor;
typedef struct WGPURasterizationStateDescriptor {
    WGPUChainedStruct const* nextInChain;
    WGPUFrontFace frontFace;
    WGPUCullMode cullMode;
    int32_t depthBias;
    float depthBiasSlopeScale;
    float depthBiasClamp;
} WGPURasterizationStateDescriptor;
typedef struct WGPURenderPassDepthStencilAttachmentDescriptor {
    WGPUTextureView attachment;
    WGPULoadOp depthLoadOp;
    WGPUStoreOp depthStoreOp;
    float clearDepth;
    WGPULoadOp stencilLoadOp;
    WGPUStoreOp stencilStoreOp;
    uint32_t clearStencil;
} WGPURenderPassDepthStencilAttachmentDescriptor;
typedef struct WGPUStencilStateFaceDescriptor {
    WGPUCompareFunction compare;
    WGPUStencilOperation failOp;
    WGPUStencilOperation depthFailOp;
    WGPUStencilOperation passOp;
} WGPUStencilStateFaceDescriptor;
typedef struct WGPUVertexAttributeDescriptor {
    WGPUVertexFormat format;
    uint64_t offset;
    uint32_t shaderLocation;
} WGPUVertexAttributeDescriptor;
typedef struct WGPUColorStateDescriptor {
    WGPUChainedStruct const* nextInChain;
    WGPUTextureFormat format;
    WGPUBlendDescriptor alphaBlend;
    WGPUBlendDescriptor colorBlend;
    WGPUColorWriteMaskFlags writeMask;
} WGPUColorStateDescriptor;
typedef struct WGPUDepthStencilStateDescriptor {
    WGPUChainedStruct const* nextInChain;
    WGPUTextureFormat format;
    bool depthWriteEnabled;
    WGPUCompareFunction depthCompare;
    WGPUStencilStateFaceDescriptor stencilFront;
    WGPUStencilStateFaceDescriptor stencilBack;
    uint32_t stencilReadMask;
    uint32_t stencilWriteMask;
} WGPUDepthStencilStateDescriptor;
typedef struct WGPURenderPassColorAttachmentDescriptor {
    WGPUTextureView attachment;
    WGPUTextureView resolveTarget;
    WGPULoadOp loadOp;
    WGPUStoreOp storeOp;
    WGPUColor clearColor;
} WGPURenderPassColorAttachmentDescriptor;
typedef struct WGPUTextureCopyView {
    WGPUChainedStruct const* nextInChain;
    WGPUTexture texture;
    uint32_t mipLevel;
    uint32_t arrayLayer;
    WGPUOrigin3D origin;
} WGPUTextureCopyView;
typedef struct WGPUTextureDescriptor {
    WGPUChainedStruct const* nextInChain;
    char const* label;
    WGPUTextureUsageFlags usage;
    WGPUTextureDimension dimension;
    WGPUExtent3D size;
    uint32_t arrayLayerCount;
    WGPUTextureFormat format;
    uint32_t mipLevelCount;
    uint32_t sampleCount;
} WGPUTextureDescriptor;
typedef struct WGPUVertexBufferLayoutDescriptor {
    uint64_t arrayStride;
    WGPUInputStepMode stepMode;
    uint32_t attributeCount;
    WGPUVertexAttributeDescriptor const* attributes;
} WGPUVertexBufferLayoutDescriptor;
typedef struct WGPURenderPassDescriptor {
    WGPUChainedStruct const* nextInChain;
    char const* label;
    uint32_t colorAttachmentCount;
    WGPURenderPassColorAttachmentDescriptor const* colorAttachments;
    WGPURenderPassDepthStencilAttachmentDescriptor const* depthStencilAttachment;
} WGPURenderPassDescriptor;
typedef struct WGPUVertexStateDescriptor {
    WGPUChainedStruct const* nextInChain;
    WGPUIndexFormat indexFormat;
    uint32_t vertexBufferCount;
    WGPUVertexBufferLayoutDescriptor const* vertexBuffers;
} WGPUVertexStateDescriptor;
typedef struct WGPURenderPipelineDescriptor {
    WGPUChainedStruct const* nextInChain;
    char const* label;
    WGPUPipelineLayout layout;
    WGPUProgrammableStageDescriptor vertexStage;
    WGPUProgrammableStageDescriptor const* fragmentStage;
    WGPUVertexStateDescriptor const* vertexState;
    WGPUPrimitiveTopology primitiveTopology;
    WGPURasterizationStateDescriptor const* rasterizationState;
    uint32_t sampleCount;
    WGPUDepthStencilStateDescriptor const* depthStencilState;
    uint32_t colorStateCount;
    WGPUColorStateDescriptor const* colorStates;
    uint32_t sampleMask;
    bool alphaToCoverageEnabled;
} WGPURenderPipelineDescriptor;