WebGPUGen/WaveEngine.Bindings.WebGPU/Structs.cs


	[StructLayout(LayoutKind.Sequential)]
	public unsafe struct WGPURenderPassColorAttachmentDescriptor
	{
		public WGPUTextureView attachment;
		public WGPUTextureView resolveTarget;
		public WGPULoadOp loadOp;
		public WGPUStoreOp storeOp;
		public WGPUColor clearColor;
	}

	[StructLayout(LayoutKind.Sequential)]
	public unsafe struct WGPUTextureCopyView
	{
		public WGPUChainedStruct* nextInChain;
		public WGPUTexture texture;
		public uint mipLevel;
		public WGPUOrigin3D origin;
	}

	[StructLayout(LayoutKind.Sequential)]
	public unsafe struct WGPUTextureDescriptor
	{
		public WGPUChainedStruct* nextInChain;
		public char* label;
		public WGPUTextureUsageFlags usage;
		public WGPUTextureDimension dimension;
		public WGPUExtent3D size;
		public WGPUTextureFormat format;
		public uint mipLevelCount;
		public uint sampleCount;
	}

	[StructLayout(LayoutKind.Sequential)]
	public unsafe struct WGPUVertexBufferLayoutDescriptor
	{
		public ulong arrayStride;
		public WGPUInputStepMode stepMode;
		public uint attributeCount;
		public WGPUVertexAttributeDescriptor* attributes;
	}

	[StructLayout(LayoutKind.Sequential)]
	public unsafe struct WGPURenderPassDescriptor
	{
		public WGPUChainedStruct* nextInChain;
		public char* label;
		public uint colorAttachmentCount;
		public WGPURenderPassColorAttachmentDescriptor* colorAttachments;
		public WGPURenderPassDepthStencilAttachmentDescriptor* depthStencilAttachment;
		public WGPUQuerySet occlusionQuerySet;
	}

	[StructLayout(LayoutKind.Sequential)]
	public unsafe struct WGPUVertexStateDescriptor
	{
		public WGPUChainedStruct* nextInChain;
		public WGPUIndexFormat indexFormat;
		public uint vertexBufferCount;
		public WGPUVertexBufferLayoutDescriptor* vertexBuffers;
	}

	[StructLayout(LayoutKind.Sequential)]
	public unsafe struct WGPURenderPipelineDescriptor
	{
		public WGPUChainedStruct* nextInChain;
		public char* label;
		public WGPUPipelineLayout layout;
		public WGPUProgrammableStageDescriptor vertexStage;
		public WGPUProgrammableStageDescriptor* fragmentStage;
		public WGPUVertexStateDescriptor* vertexState;
		public WGPUPrimitiveTopology primitiveTopology;
		public WGPURasterizationStateDescriptor* rasterizationState;
		public uint sampleCount;
		public WGPUDepthStencilStateDescriptor* depthStencilState;
		public uint colorStateCount;
		public WGPUColorStateDescriptor* colorStates;
		public uint sampleMask;
		public bool alphaToCoverageEnabled;
	}

}

